# nox-personal-assistance

./: .env.example  .geminiignore  .gitignore  ARCHITECTURE_PLAN.md  Cargo.toml  GEMINI.md  HEARTBEAT_LOGIC.md  LICENSE  README.md
data/: todos.json
src/: config.rs  main.rs  runs.rs
src/agent/: core.rs  mod.rs  orchestrator.rs
src/calendar/: destination.rs  domain.rs  format.rs  google.rs  google_auth.rs  heartbeat.rs  ics.rs  mod.rs  resolve.rs  service.rs
src/channels/: telegram.rs
src/llm/: ollama.rs
src/tools/: calendar.rs  gemini.rs  gmail.rs  mod.rs  news.rs  news_filter.rs  news_format.rs  news_scheduler.rs  news_score.rs  news_sources.rs  news_store.rs  todo.rs
src/web/: mod.rs
