[package]
name = "nox-personal-assistance"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
google-generative-ai-rs = "0.3"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
sha2 = "0.10"
hex = "0.4"
ical = "0.11"
urlencoding = "2.1"
async-trait = "0.1"

teloxide = { version = "0.13", default-features = false, features = [
    "macros",
    "native-tls",
] }

reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "multipart",
    "native-tls",
] }
